--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,6 +6,8 @@ api:
   # API URL'i - Bu URL'i değiştirmeyin, özel bir gereksinim olmadığı sürece
   url: 'http://ai.kynux.cloud/api/v1/chat/completions'
   
+  key: "YOUR_MODEL_KEY"
+
   # Kullanılacak AI modeli - /ai models komutu ile mevcut modelleri listeleyebilirsiniz
   model: 'grok-3-mini'
   
